Wired up feedback

--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -372,7 +372,7 @@
                 Please let us know how Psiphon is working for you so we can make the system better!
               </p>
               <p data-i18n="[html]feedback#top_para_2" class="hidden">
-                Many problems can be fixed by downloading the latestb version. You can
+                Many problems can be fixed by downloading the latest version. You can
                 <a class="NewVersionURL" href="#">download the latest version by clicking here</a>,
                 or you can send an email to <a class="NewVersionEmail" href="#"></a>.
               </p>
@@ -391,6 +391,9 @@
                     <tr>
                       <td>
                         <div class="happy feedback-choice deselected"
+                             data-feedback-choice-value=0
+                             data-feedback-choice-hash="24f5c290039e5b0a2fd17bfcdb8d3108"
+                             data-feedback-choice-title="Overall satisfaction"
                              data-match-height=".feedback-choice" data-match-height-align="center">
                           <i class="icon-smile"></i>
                           <br>
@@ -401,6 +404,9 @@
                       </td>
                       <td>
                         <div class="sad feedback-choice deselected"
+                             data-feedback-choice-value=1
+                             data-feedback-choice-hash="24f5c290039e5b0a2fd17bfcdb8d3108"
+                             data-feedback-choice-title="Overall satisfaction"
                              data-match-height=".feedback-choice" data-match-height-align="center">
                           <i class="icon-frown"></i>
                           <br>
@@ -412,59 +418,46 @@
                     </tr>
                   </tbody>
                 </table>
-              </div>
-
-              <br>
-
-              <div id="text_feedback_form">
-                <p>
-                  <span data-i18n="feedback#text_feedback_prompt">
-                    Please enter your comments here:
-                  </span>
-                </p>
-                <textarea class="input-block-level" id="text_feedback_textarea" rows="3"></textarea>
-
-                <div>
-                  <p>
-                    <span data-i18n="feedback#text_feedback_email_prompt">
-                      If you would like us to respond to you, please enter your email address:
-                    </span>
-                  </p>
-                  <input type="email" id="text_feedback_email" class="input-block-level">
-                </div>
-                <br>
-              </div>
-
-              <br>
+              </div><!-- /feedback-smiley-container -->
 
               <div>
-                <label for="send_diagnostic" class="checkbox">
-                  <input type="checkbox" checked="" id="send_diagnostic">
+                <label for="feedback-comments" data-i18n="feedback#text_feedback_prompt">
+                  Please enter your comments here:
+                </label>
+                <textarea class="input-block-level" id="feedback-comments" rows="3"></textarea>
+              </div>
+
+              <div>
+                <label for="feedback-email" data-i18n="feedback#text_feedback_email_prompt">
+                  If you would like us to respond to you, please enter your email address:
+                </label>
+                <input type="email" id="feedback-email" class="input-block-level">
+              </div>
+
+              <div>
+                <label for="feedback-send-diagnostic" class="checkbox">
+                  <input type="checkbox" checked="" id="feedback-send-diagnostic">
                   <span data-i18n="[html]feedback#diagnostic_check">
                     Upload diagnostic data. Please note that this diagnostic data does not
                     identify you, and it will help us to keep Psiphon running smoothly.
-                    <a class="dataCollectionInfoURL" href="#">Click here to see what data we collect.</a>
+                    <a class="DataCollectionInfoURL" href="#">Click here to see what data we collect.</a>
                   </span>
                 </label>
               </div>
 
-              <input type="hidden" value="" id="formdata" name="formdata">
               <div class="form-actions">
-                <a id="submit_button" class="btn btn-primary btn-large" data-i18n="feedback#submit_button">
+                <a id="feedback-submit" class="btn btn-primary btn-large" data-i18n="feedback#submit_button">
                   Submit
                 </a>
               </div>
             </form>
 
-          </div>
-          <!-- /questionnaireContent -->
+          </div><!-- /questionnaire content -->
 
-          <p>
-            <span data-i18n="[html]feedback#text_feedback_bottom_para">
-              If the above form is not working, or you would like to send screenshots, please email us at
-              <a id="emailAddress" href="mailto:feedback+android@psiphon.ca">feedback+android@psiphon.ca</a>
-            </span>
-          </p>
+          <div class="help-block" data-i18n="[html]feedback#text_feedback_bottom_para">
+            If the above form is not working, or you would like to send screenshots, please email us at
+            <a href="mailto:feedback+windows@psiphon.ca">feedback+windows@psiphon.ca</a>.
+          </div>
 
         </div><!-- /feedback-pane -->
 
