Fixed URI encoding of feedback

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -16673,7 +16673,7 @@ function HtmlCtrlInterface_UpdateSettings(settingsJSON) {
 function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
   setTimeout(function() {
     // Don't call encodeURIComponent. The application code can more easily handle a plain string.
-    window.location = 'app:sendfeedback?' + feedbackJSON;
+    window.location = 'app:sendfeedback?' + encodeURIComponent(feedbackJSON);
   }, 1);
 }
 
@@ -16833,7 +16833,6 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
           <form class="vpn-incompatible">
             <fieldset>
               <legend>
-                <i class="icon-fixed-width icon-globe"></i>
                 <span data-i18n="settings#egress-region#heading">Psiphon server region</span>
               </legend>
               <label class="control-label" for="EgressRegion" data-i18n="settings#egress-region#select-label">
