Fixed connection state icon on tab

--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -16206,7 +16206,7 @@ function updateConnectToggle() {
   });
 
   $('a[href="#connection-pane"][data-toggle="tab"] .label').each(function() {
-    $(this).toggleClass('invisible', $(this).data('connect-state') !== g_lastState);
+    $(this).toggleClass('hidden', $(this).data('connect-state') !== g_lastState);
   });
 
   if (g_lastState === 'starting') {
