--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -466,7 +466,7 @@
           <div>
             <label class="checkbox invisible" for="show-debug-messages">
                 <input type="checkbox" id="show-debug-messages"/>
-                <span data-i18n="feedback#messages#show-debug-label">
+                <span data-i18n="messages#show-debug-label">
                   Show debug messages
                 </span>
             </label>
@@ -497,7 +497,8 @@
   </div><!-- /main-container -->
 
   <!-- Don't use the hidden class for this, otherwise the toggle() won't work. -->
-  <div id="feedback-success-alert" class="alert alert-success global-alert" style="display:none">
+  <div id="feedback-success-alert" class="alert alert-success global-alert" style="display:none"
+       data-i18n="[html]feedback#success-message">
     <strong>Thank you!</strong> Your feedback has been sent.
   </div>
 
